Version 0.3.1Ae4

- Validatetrfr hash valid verification.

Version 0.3.1Ae3

- Forceserver for verificators.
- Exception catcher on PTC_Order.
- Clear received orders IDs when pending is requested.
- Implement outgoing strings.
- Update headers short to 144 blocks
- Funds address returned on synctus request.
- Not close server when undone block.
- Solve the issue that it do not resync after undone block.

Version 0.3.1Ae2

- Fixed multiple MNs file requests.
- New network hashrate formula.
- ProtocolLine(18) activated.
- Connection to mainnet improved.
- Fixed division by zero bug on MNS payment.
- Filter <0 orders on validatetrfr.

Version 0.3.1Ae1

- Official release

Version 0.3.1Ad8

- Turbo update headers.
- NSLTIME implemented.
- LBDiff added to nodestatus.

Version 0.3.1Ad7

- Official release

Version 0.3.1Ad6

- Update recent headers instead download complete file.
- Nodestatus improved.

Version 0.3.1Ad5

- Official release

Version 0.3.1Ad4

- Fixed post-dated transfers propagation.
- NSLBALANCE protocol available. (returns address available)
- New seed node: 107.172.193.176
- New seed node: 107.175.194.151
- New seed node: 192.210.226.118
- Removed old seed nodes.
- Added GetWebSeedNodes.
- Removed unit Poolmanage.
- BlockHeader.Difficult := PoSCount
- BlockHeader.NxtBlkDiff := MNsCount

Version 0.3.1Ad3

- Official release

Version 0.3.1Ad2

- Fixed netrate calculation.
- Fixed error using a different MN port.
- MN_IP auto modified when auto is selected.

Version 0.3.1Ad1

- Auto MNs IP assign.
- Slots array is thread safe.
- Removed all TFILESTREAM and FINALLY.
- Node test improved.
- Master node earnings report implemented.
- Node Context.data assigned including the slot number.
- Code cleaned.
- Mainform size and position saved.

Version 0.3.0Aa6

- MNs reports creation and propagation.

Version 0.3.0Aa5

- Nethashrate function&command implemented.
- Datapanel: target deprecated.
- ** BlockHeader.difficult is now PoS addresses paid.